[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    strum = "0.26.3"
    strum_macros = "0.26.3"
    thiserror = "1.0.63"
    beef = "0.5.2"
    smartstring = "1.0.1"
    typed-builder = "0.20.0"
    ouroboros = "0.18.4"
